--- a/innfinity/src/App.css
+++ b/innfinity/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+
+
 body {
   margin: 0;
 }
@@ -13,6 +16,30 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+a{
+  color: rgb(113, 74, 255);
+
+}
+
+.content {
+  margin: 1% 10%;
+  /* margin: 0% 10%; */
+}
+
+.description {
+  /* margin: 20px; */
+  padding: 20px;
+  color: white;
+  background-color: #0e0e0e;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.description p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
+
 
 .title-container {
   flex: 1;
@@ -22,11 +49,29 @@ body {
   text-align: center;
   align-items: center;
   justify-content: center;
-  margin-top: 20px; 
+  margin-top: 30px; 
+  /* padding-top: 56px; */
+  font-family: 'Poppins', sans-serif;
+  margin: 20px;
 }
 
+
+.subtitle-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* text-align: center;
+  align-items: center;
+  justify-content: center; */
+  margin-top: 30px; 
+  font-family: 'Poppins', sans-serif;
+  /* margin: 20px; */
+}
+
+
 .main-content {
-  margin-top: 46px;
+  margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -43,8 +88,8 @@ body {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); } /* Start rotation at 0 degrees */
-  100% { transform: rotate(360deg); } /* End rotation at 360 degrees (1 full rotation) */
+  0% { transform: rotate(0deg); } 
+  100% { transform: rotate(360deg); }
 }
 
 
