--- a/innfinity/src/navbar.css
+++ b/innfinity/src/navbar.css
@@ -4,36 +4,35 @@ html {
     scroll-behavior: smooth;
 }
 
-.navbar.bg-dark {
-    background-color: #000000 !important;
-}
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #ffffff;
     background: rgb(33,33,33);
     background: radial-gradient(circle, rgba(33,33,33,1) 0%, rgba(5,5,5,1) 100%);
     position: fixed;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
+    /* width: 100%; */
+}
+
+nav{
     width: 100%;
+    padding: 20px;
 }
 
 
 .navbar-nav a:hover {
-    background-color: #7328ff;
+    background-color: #6128ffd2;
     border-radius: 5px;
     color: #ffffff;
 }
 
 .navbar-nav .nav-link.active {
-    color: #571bfd;
+    text-decoration: underline;
 }
   
-.navbar-brand {
-    font-size: 1.8rem;
-}
+
   
 .navbar-nav .nav-link {
     font-size: 1.1rem;
@@ -41,8 +40,13 @@ html {
     
 }
 
+a.nav-link.active {
+    color: #571bfd;
+}
+
 .navbar-nav a:hover{
     background-color: #7328ff;
     border-radius: 5px;
-    color: #ffffff;
+    color: #000000;
 }
+
