--- a/innfinity/src/App.css
+++ b/innfinity/src/App.css
@@ -5,12 +5,28 @@ body {
   margin: 0;
 }
 
+footer{
+  /* background-color: #0e0e0e; */
+  color: white;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+hr{
+  color: rgb(160, 160, 160);
+}
+
+.text-muted {
+  color: #bbbbbb !important;
+}
+
 .App {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; 
   background: radial-gradient(circle, rgba(34, 34, 34, 1) 0%, rgba(0, 0, 0, 1) 100%);
   color: white;
   font-family: 'Poppins', sans-serif;
@@ -71,7 +87,6 @@ a{
 
 
 .main-content {
-  margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
