--- a/innfinity-v2/public/css/style.css
+++ b/innfinity-v2/public/css/style.css
@@ -76,6 +76,10 @@ hr {
   padding: 15px;
   transition: all 0.8s;
 }
+.nav-logo{
+  width: 30px;
+  height: 30px;
+}
 #menu.navbar-default {
   background-color: #fff;
   border-color: rgba(231, 231, 231, 0);
