--- a/innfinity-v2/public/css/bootstrap.css
+++ b/innfinity-v2/public/css/bootstrap.css
@@ -1599,7 +1599,8 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    /* width: 1170px; */
+    width: 1200px;
   }
 }
 .container-fluid {
@@ -4274,7 +4275,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand {
   float: left;
   height: 50px;
-  padding: 15px 15px;
+  padding: 12px 12px;
   font-size: 18px;
   /* line-height: 20px; */
 }
