--- a/innfinity-v2/public/css/style.css
+++ b/innfinity-v2/public/css/style.css
@@ -224,6 +224,7 @@ a:focus,
 }
 .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
+  min-height: 100vh;
 }
 .intro h1 {
   font-family: "Poppins", sans-serif;
@@ -366,7 +367,7 @@ header .intro-text {
   margin-bottom: 40px;
 }
 /* Portfolio Section */
-#portfolio {
+#gallery {
   padding: 100px 0;
 }
 .portfolio-item {
