--- a/innfinity-v2/src/components/LoginPage.css
+++ b/innfinity-v2/src/components/LoginPage.css
@@ -5,6 +5,7 @@
   justify-content: center;
   min-height: 100vh;
   padding: 20px;
+  background-color: rgb(245, 245, 245);
 }
 
 .login-form {
@@ -13,7 +14,8 @@
   background: #f7f7f7;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #dddddd;
 }
 
 .login-form input {
@@ -22,6 +24,7 @@
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  font-family: 'Poppins', sans-serif;
 }
 
 .login-form button {
