--- a/innfinity-v2/src/components/employeeportal.css
+++ b/innfinity-v2/src/components/employeeportal.css
@@ -1,6 +1,8 @@
 #renting{
     margin-top: 100px;
+    font-family: 'Poppins', sans-serif;
 }
+
 
 #renting .section-title {
     margin-bottom: 0px;
@@ -8,6 +10,7 @@
 
 #renting label{
     color: rgb(15, 24, 10);
+    font-weight: 500;
 }
 
 #renting-btn{
