--- a/innfinity-v2/src/components/employeeportal.css
+++ b/innfinity-v2/src/components/employeeportal.css
@@ -35,9 +35,11 @@
 #renting #book{
     padding: 40px;
     border-radius: 10px;
+    margin-bottom: 40px;
 }
 
 #approval-box{
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
